--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -55,8 +55,8 @@ jobs:
           args:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
-            -Dsonar.projectKey= NUS-ISS-CLINIC-BOOKING_frontend
-            -Dsonar.organization= nus-iss-clinic-booking
+            -Dsonar.projectKey=NUS-ISS-CLINIC-BOOKING_frontend
+            -Dsonar.organization=nus-iss-clinic-booking
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
